update teak analysis

--- a/teak_growth_analysis.ipynb
+++ b/teak_growth_analysis.ipynb
@@ -2518,13 +2518,208 @@
    "id": "b9c23b5f-df6e-4d76-9aea-ab7d64913a81",
    "metadata": {},
    "source": [
-    "### Mean DBH and Height"
+    "### Mean DBH, Height and Basal Area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "97b26a96-d9d9-4279-aeee-60e013b313e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtable['Measurement Year'] = dtable['Measuring date'].dt.year\n",
+    "plot_growth = dtable.groupby(['PLOT', 'Measurement Year']).agg({\n",
+    "    'Annual Diameter Growth': 'mean',\n",
+    "    'Annual Height Growth': 'mean',\n",
+    "    'Annual_BAG': 'sum',\n",
+    "    'TREE NR': 'nunique'\n",
+    "}).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "4a2f4071-a90a-4397-b199-445c328446fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PLOT</th>\n",
+       "      <th>Measurement Year</th>\n",
+       "      <th>Annual Diameter Growth</th>\n",
+       "      <th>Annual Height Growth</th>\n",
+       "      <th>Annual_BAG</th>\n",
+       "      <th>TREE NR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.114176</td>\n",
+       "      <td>2.231341</td>\n",
+       "      <td>0.212824</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3.226602</td>\n",
+       "      <td>3.549152</td>\n",
+       "      <td>0.284604</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2.083317</td>\n",
+       "      <td>0.890364</td>\n",
+       "      <td>0.218715</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1.091633</td>\n",
+       "      <td>-0.052901</td>\n",
+       "      <td>0.127897</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4000</th>\n",
+       "      <td>990</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>0.281355</td>\n",
+       "      <td>1.185877</td>\n",
+       "      <td>0.106936</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4001</th>\n",
+       "      <td>991</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4002</th>\n",
+       "      <td>991</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2.340768</td>\n",
+       "      <td>2.919694</td>\n",
+       "      <td>0.168620</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4003</th>\n",
+       "      <td>991</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2.647366</td>\n",
+       "      <td>-0.108105</td>\n",
+       "      <td>0.239749</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4004</th>\n",
+       "      <td>991</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>0.927245</td>\n",
+       "      <td>2.470367</td>\n",
+       "      <td>0.097380</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4005 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PLOT  Measurement Year  Annual Diameter Growth  Annual Height Growth  \\\n",
+       "0       1              2019                     NaN                   NaN   \n",
+       "1       1              2020                3.114176              2.231341   \n",
+       "2       1              2021                3.226602              3.549152   \n",
+       "3       1              2022                2.083317              0.890364   \n",
+       "4       1              2023                1.091633             -0.052901   \n",
+       "...   ...               ...                     ...                   ...   \n",
+       "4000  990              2024                0.281355              1.185877   \n",
+       "4001  991              2021                    -inf                  -inf   \n",
+       "4002  991              2022                2.340768              2.919694   \n",
+       "4003  991              2023                2.647366             -0.108105   \n",
+       "4004  991              2024                0.927245              2.470367   \n",
+       "\n",
+       "      Annual_BAG  TREE NR  \n",
+       "0       0.000000       43  \n",
+       "1       0.212824       43  \n",
+       "2       0.284604       41  \n",
+       "3       0.218715       42  \n",
+       "4       0.127897       42  \n",
+       "...          ...      ...  \n",
+       "4000    0.106936       42  \n",
+       "4001        -inf       67  \n",
+       "4002    0.168620       42  \n",
+       "4003    0.239749       42  \n",
+       "4004    0.097380       43  \n",
+       "\n",
+       "[4005 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_growth"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b26a96-d9d9-4279-aeee-60e013b313e2",
+   "id": "ac6695f5-ca67-46e4-92e5-e08bc42b92c4",
    "metadata": {},
    "outputs": [],
    "source": []
