add save to file

--- a/teak_growth_analysis.ipynb
+++ b/teak_growth_analysis.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\GILBERT FG\\AppData\\Local\\Temp\\ipykernel_9868\\4228675863.py:6: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\GILBERT FG\\AppData\\Local\\Temp\\ipykernel_14964\\4228675863.py:6: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(tree_data_query, conn)\n"
      ]
     },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "327f2e78-590e-4b28-83d4-10074540651b",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "79732520-110d-44d2-925f-f25ab9219609",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "601c00b2-29ce-461c-ab1b-267f79b80565",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
        "14    1     46.0         Teak   4.50       6.2  Fire scars  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "95f0e58f-94eb-4092-8e70-771b55c40365",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5dc8fba5-fdd0-4e86-ba5f-a5baee2da31b",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
        "       'Abnormal tree', 'Crooked'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "895d8714-034d-442a-ab7e-2061bad130fc",
    "metadata": {},
    "outputs": [],
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "8fc3347b-a0e0-409e-a3f4-8158a785e8ec",
    "metadata": {},
    "outputs": [],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "ceda4127-861e-43f1-9bec-af763d485b9d",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "7f5697bd-c0af-48f1-9d09-21702b850fed",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "be988f7e-6b08-45bf-840a-786804c5e713",
    "metadata": {},
    "outputs": [],
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "2b71ec69-9d1f-404b-8c5f-a00e4235c025",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "5b18766f-782c-4197-86bd-9c37f943e561",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "52ea711e-44b1-4f15-aa2b-1ad144fe9935",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "a1d75c26-e27f-4811-8021-7b20bc5e555e",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "6fed0404-624a-475d-8b93-11d95ba16975",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
        "       'Under a tree', 'Marked', 'Abnormal tree'], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "5acae12e-43fe-4513-8db9-00933b46351a",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "3c216e72-535b-42b8-afc2-bc6c6080f504",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "21626836-380a-431e-9c66-216d58368aac",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "737228e9-d6c6-4e8a-8958-ea050ad39436",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "0426fbeb-416c-4ec4-a458-3ca2748d87a0",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "b1f24e3b-67d4-435b-8f43-a1fc73f68c99",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1350,7 @@
        "48     58.0         Teak   8.00      13.0    None      22/1/2019  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "c89021ca-80d7-4f3f-b6a8-dc70e882c423",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
        "48     58.0         Teak   8.00      13.0    None     2019-01-22  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "91253bde-e9f8-4490-aba1-b49066ec8ec3",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1758,7 @@
        "[187156 rows x 12 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "3f98c3c9-745a-4b0c-a701-b27663bdbf8a",
    "metadata": {},
    "outputs": [],
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "ce607f80-6a70-4537-9061-d6250c989020",
    "metadata": {},
    "outputs": [
@@ -2066,7 +2066,7 @@
        "[187156 rows x 14 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "fc4cc9b8-9619-429f-9f90-d582088a9bb6",
    "metadata": {},
    "outputs": [
@@ -2264,7 +2264,7 @@
        "120529              1.209437  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "1af5a58d-dc8a-4df5-afcf-5668853104f3",
    "metadata": {},
    "outputs": [
@@ -2488,7 +2488,7 @@
        "120529              1.209437  0.028353  0.002051    0.002480  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "97b26a96-d9d9-4279-aeee-60e013b313e2",
    "metadata": {},
    "outputs": [],
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "4a2f4071-a90a-4397-b199-445c328446fa",
    "metadata": {},
    "outputs": [
@@ -2707,7 +2707,7 @@
        "[4005 rows x 6 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,8 +2718,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ac6695f5-ca67-46e4-92e5-e08bc42b92c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_growth.to_csv('plot_analysis.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bac8809-0ee0-4e73-82e9-6dd0054dd10a",
    "metadata": {},
    "outputs": [],
    "source": []
